Fixed overflow:hidden bug in Opera. Removed mysterious dumb margin in banner container

--- a/css/style.css
+++ b/css/style.css
@@ -6,43 +6,43 @@
 
 /***** Animation Controls for Rotating Banner images *****/
 @-webkit-keyframes banner{
-	0%{top:-723px;}
-	32%{top:-723px;}
-	35%{top:-483px;}
-	70%{top:-483px;}
-	73%{top:-243px;}
-	97%{top:-243px;}
+	0%{top:-720px;}
+	32%{top:-720px;}
+	35%{top:-480px;}
+	70%{top:-480px;}
+	73%{top:-240px;}
+	97%{top:-240px;}
 	100%{top:0px;}
 }
 
 @-o-keyframes banner{
-	0%{top:-723px;}
-	32%{top:-723px;}
-	35%{top:-483px;}
-	70%{top:-483px;}
-	73%{top:-243px;}
-	97%{top:-243px;}
+	0%{top:-720px;}
+	32%{top:-720px;}
+	35%{top:-480px;}
+	70%{top:-480px;}
+	73%{top:-240px;}
+	97%{top:-240px;}
 	100%{top:0px;}
 }
 
 
 @-moz-keyframes banner{
-	0%{top:-723px;}
-	32%{top:-723px;}
-	35%{top:-483px;}
-	70%{top:-483px;}
-	73%{top:-243px;}
-	97%{top:-243px;}
+	0%{top:-720px;}
+	32%{top:-720px;}
+	35%{top:-480px;}
+	70%{top:-480px;}
+	73%{top:-240px;}
+	97%{top:-240px;}
 	100%{top:0px;}
 }
 
 @-ms-keyframes banner{
-	0%{top:-723px;}
-	32%{top:-723px;}
-	35%{top:-483px;}
-	70%{top:-483px;}
-	73%{top:-243px;}
-	97%{top:-243px;}
+	0%{top:-720px;}
+	32%{top:-720px;}
+	35%{top:-480px;}
+	70%{top:-480px;}
+	73%{top:-240px;}
+	97%{top:-240px;}
 	100%{top:0px;}
 }
 
@@ -67,7 +67,7 @@
 	70%{top:100px;}
 	73%{top:180px}
 	97%{top:180px}
-	100%{top:55px}
+	100%{top:20px}
 }
 
 @-o-keyframes arrow{
@@ -77,7 +77,7 @@
 	70%{top:100px;}
 	73%{top:180px}
 	97%{top:180px}
-	100%{top:55px}
+	100%{top:20px}
 }
 
 @-moz-keyframes arrow{
@@ -87,7 +87,7 @@
 	70%{top:100px;}
 	73%{top:180px}
 	97%{top:180px}
-	100%{top:55px}
+	100%{top:20px}
 }
 
 @-ms-keyframes arrow{
@@ -97,7 +97,7 @@
 	70%{top:100px;}
 	73%{top:180px}
 	97%{top:180px}
-	100%{top:55px}
+	100%{top:20px}
 }
 
 .sliderArrow{
@@ -294,6 +294,12 @@ background: linear-gradient(left, rgba(221,221,221,1) 0%,rgba(255,255,255,1) 31%
 *****   END MANUAL CONTROLS   *****
 **********************************/
 
+
+.operaBug{
+	overflow: hidden;
+}
+
+
 .container{
 	position: relative;
 	display:block;
@@ -315,7 +321,7 @@ background: linear-gradient(left, rgba(221,221,221,1) 0%,rgba(255,255,255,1) 31%
 	display:block;
 	left:301px;
 	border:none;
-	margin-top: 3px;
+/* 	margin-top: 3px; */
 	overflow: hidden;
 }
 
